  only takes the path to `asciidoc.py`, using the current Python interpreter by
  default. To configure the Python interpreter as well, use
  `--asciidoc-python path/to/python --asciidoc path/to/asciidoc.py`
  instead of the former
  `--asciidoc path/to/python path/to/asciidoc.py`.
- Dark mode is now supported with Qt 5.15.2 (which is not released yet)
- The `readability-js` userscript now adds some CSS to improve the reader mode
  styling in various scenarios:
  * Images are now shrinked to the page width, similarly to what Firefox' reader
    mode does.
  * Some images ore now displayed as block (rather than inline) which is what
    Firefox' reader mode does as well.
  * Blockquotes are now styled more distinctively, again based on the Firefox
    reader mode.
  * Code blocks are now easier to distinguish from text and tables have visible
    cell margins.

Added
~~~~~

- `:undo` now has a new `-w` / `--window` argument, which can be used to
  restore closed windows (rather than tabs). This is bound to `U` by default.
- `:jseval` can now take `javascript:...` URLs via a new `--url` flag.
- New replacement `{aligned_index}` for `tabs.title.format` and `format_pinned`
  which behaves like `{index}`, but space-pads the index based on the total
  numbers of tabs. This can be used to get aligned tab texts with vertical
  tabs.
- New command `:devtools-focus` (bound to `wIf`) to toggle keyboard focus
  between the devtools and web page.
- The `--target` argument to qutebrowser now understands a new `private-window`
  value, which can be used to open a private window in an existing instance
  from the commandline.
- The `:download-open` command now has a new `--dir` flag, which can be used to
  open the directory containing the downloaded file. An entry to do the same
  was also added to the context menu.
- Messages are now wrapped when they are too long to be displayed on a single line.
- New possible `--debug-flag` values: