@@ -67,6 +67,8 @@ Changed
   instead of the former
   `--asciidoc path/to/python path/to/asciidoc.py`.
 - Dark mode is now supported with Qt 5.15.2 (which is not released yet)
+- The default for the darkmode `policy.images` setting is now set to `smart`
+  which fixes issues with e.g. formulas on Wikipedia.
 - The `readability-js` userscript now adds some CSS to improve the reader mode
   styling in various scenarios:
   * Images are now shrinked to the page width, similarly to what Firefox' reader
@@ -145,6 +147,9 @@ Fixed
 - When a windowed inspector is clicked, insert mode now isn't entered anymore.
 - When `:undo` to re-open a tab but `tabs.tabs_are_windows` was set between
   closing and undoing the close, qutebrowser crashed. This is now fixed.
+- With QtWebEngine 5.15.0, setting the darkmode image policy to `smart` leads to
+  renderer process crashes. The offending setting value is now ignored with a
+  warning.
 - Fixes for the `qute-pass` userscript:
   * With newer `gopass` versions, a deprecation notice was copied as
     password due to `qute-pass` using it in a deprecated way.
